# sparv-sbx-ocr-correction

./: Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: release-viklofg-sweocr.yml  test.yml
ocr-correction-viklofg-sweocr/: Makefile  README.md  pyproject.toml
ocr-correction-viklofg-sweocr/src/sbx_ocr_correction_viklofg_sweocr/: __init__.py  ocr_corrector.py
ocr-correction-viklofg-sweocr/tests/: requirements-testing.in
