[project]
name = "sparv-sbx-ocr-correction-workspace"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.uv]
dev-dependencies = [
    "bump-my-version>=0.28.0",
    "mypy>=1.12.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "syrupy>=4.7.2",
    "sparv-pipeline-testing @ git+https://github.com/spraakbanken/sparv-pipeline-testing.git@v0.1.7",
]

[tool.uv.workspace]
members = ["ocr-correction-viklofg-sweocr"]
